WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302268
[blocks-in-inline] Fix paint order of blocks
https://bugs.webkit.org/show_bug.cgi?id=302268
Summary
[blocks-in-inline] Fix paint order of blocks
Antti Koivisto
Reported
2025-11-10 08:45:32 PST
Currently they paint line inline-blocks but that is not correct.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-10 08:45:44 PST
<
rdar://problem/164407663
>
Antti Koivisto
Comment 2
2025-11-10 08:51:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53684
EWS
Comment 3
2025-11-10 10:47:57 PST
Committed
302804@main
(98705549462a): <
https://commits.webkit.org/302804@main
> Reviewed commits have been landed. Closing PR #53684 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug