Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentPainter.cpp
@@ -123,7 +123,14 @@ void InlineContentPainter::paintDisplayBox(const InlineDisplay::Box& box)
     if (auto* renderer = dynamicDowncast<RenderBox>(box.layoutBox().rendererForIntegration()); renderer) {
         if (m_paintInfo.shouldPaintWithinRoot(*renderer)) {
             // FIXME: Painting should not require a non-const renderer.
-            const_cast<RenderBox*>(renderer)->paintAsInlineBlock(m_paintInfo, flippedContentOffsetIfNeeded(*renderer));
+            CheckedRef paintRenderer = const_cast<RenderBox&>(*renderer);
+            auto flippedOffset = flippedContentOffsetIfNeeded(*renderer);
+            if (box.isBlockLevelBox()) {
+                // Blocks-in-inline.
+                auto paintInfoForChild = m_root.paintInfoForBlockChildren(m_paintInfo);
+                paintRenderer->paint(paintInfoForChild, flippedOffset);
+            } else
+                paintRenderer->paintAsInlineBlock(m_paintInfo, flippedOffset);
         }
     }
 }
@@ -155,19 +162,25 @@ void InlineContentPainter::paint()
         auto shouldPaintBoxForPhase = [&] {
             switch (m_paintInfo.phase) {
             case PaintPhase::ChildOutlines:
-                return box.isNonRootInlineBox();
+                return box.isNonRootInlineBox() || box.isBlockLevelBox();
             case PaintPhase::SelfOutline:
                 return box.isRootInlineBox();
             case PaintPhase::Outline:
-                return box.isInlineBox();
+                return box.isInlineBox() || box.isBlockLevelBox();
             case PaintPhase::Mask:
                 return box.isInlineBox();
+            case PaintPhase::Float:
+            case PaintPhase::ChildBlockBackground:
+            case PaintPhase::ChildBlockBackgrounds:
+                return box.isBlockLevelBox();
             default:
                 return true;
             }
         };
 
-        if (shouldPaintBoxForPhase() && layerPaintScope.includes(box)) {
+        bool includedInPaintScope = layerPaintScope.testIsIncludesAndUpdate(box);
+
+        if (includedInPaintScope && shouldPaintBoxForPhase()) {
             paintLineEndingEllipsisIfApplicable(box.lineIndex());
             paintDisplayBox(box);
         }
@@ -196,7 +209,7 @@ LayerPaintScope::LayerPaintScope(const RenderInline* inlineBoxWithLayer)
 {
 }
 
-bool LayerPaintScope::includes(const InlineDisplay::Box& box)
+bool LayerPaintScope::testIsIncludesAndUpdate(const InlineDisplay::Box& box)
 {
     auto isInside = [](auto& displayBox, auto& inlineBox)
     {
@@ -219,9 +232,12 @@ bool LayerPaintScope::includes(const InlineDisplay::Box& box)
     if (m_currentExcludedInlineBox && isInside(box, *m_currentExcludedInlineBox))
         return false;
 
+    if (box.isRootInlineBox())
+        return true;
+
     m_currentExcludedInlineBox = nullptr;
 
-    if (box.isRootInlineBox() || box.isText() || box.isLineBreak())
+    if (box.isText() || box.isLineBreak())
         return true;
 
     auto* renderer = dynamicDowncast<RenderLayerModelObject>(box.layoutBox().rendererForIntegration());
